# ruxlog-frontend

./: .env  README.md  auth.js  bun.lockb  deploy.bat  deploy.md  deploy.sh  package.json  prod-deploy.bat  prod-deploy.sh
admin-dioxus/: .env  .gitignore  AGENTS.md  Cargo.toml  Dioxus.toml  build.rs  index.html  input.css  package.json  tailwind.config.js  tailwind.css
admin-dioxus-legacy/: mod.rs  (+1 more)
admin-dioxus/assets/: editor.js  tailwind.css
admin-dioxus/assets/editor/: index.ts  types.d.ts
admin-dioxus/docs/: admin-users-store.md  analytics-dashboard-charts-plan.md  analytics-store-plan.md  animated_grid_circles_plan.md  edit-state-abstraction.md  editorjs-integration.md  editorjs-media-id-implementation-plan.md  guide.md  raw-analytics.md  rich-text-editor-plan.md  sonner-plan.md  sonner.ref
admin-dioxus/exp/: rpxy.toml
admin-dioxus/legacy/cmdk/: cmdk.rs  score.rs  selectors.rs  state.rs
admin-dioxus/legacy/command/: context.rs  item.rs
admin-dioxus/pkgs/sdk/: Cargo.toml
admin-dioxus/scripts/: header.ts
admin-dioxus/src/: config.rs  env.rs  main.rs  router.rs  types.rs
admin-dioxus/src/components/: animated_grid.rs  color_picker.rs  confirm_dialog.rs  data_table_screen.rs  editor_js_host.rs  error_details.rs  form_skeleton.rs  image_upload.rs  input.rs  list_empty_state.rs  list_error_banner.rs  list_toolbar.rs  loading_overlay.rs  media_picker_dialog.rs  media_preview_item.rs  media_upload_item.rs  media_upload_list.rs  media_upload_zone.rs  media_usage_dialog.rs  mod.rs  page_header.rs  pagination.rs  password_input.rs  portal_v2.rs  post_success_dialog.rs  shadcn_ui.rs  sidebar.rs  skeleton_table_rows.rs  tag.rs  toast.rs  user_avatar.rs  user_details_dialog.rs
admin-dioxus/src/components/analytics/: comment_rate_chart.rs  dashboard_summary_cards.rs  date_range_picker.rs  filter_toolbar.rs  interval_selector.rs  media_upload_trends_chart.rs  mod.rs  newsletter_growth_chart.rs  page_views_chart.rs  period_preset_toggle.rs  publishing_trends_chart.rs  registration_trend_chart.rs  verification_rates_chart.rs  verification_rates_chart.rs.bak  verification_rates_chart.rs.bak2
admin-dioxus/src/components/animated_blob/: animated_blob.rs  mod.rs
admin-dioxus/src/components/animated_grid/: circle.rs  mod.rs  provider.rs  utils.rs
admin-dioxus/src/components/command/: command.rs  context.rs  dialog.rs  empty.rs  group.rs  input.rs  item.rs  list.rs  mod.rs  separator.rs  utils.rs
admin-dioxus/src/components/editor/: README.md  ast.rs  bubble_menu.rs  commands.rs  mod.rs  parser.rs  renderer.rs  sanitizer.rs  shortcuts.rs  slash_commands.rs  toolbar.rs
admin-dioxus/src/components/image_editor/: canvas.rs  compress_tool.rs  crop_tool.rs  mod.rs  resize_tool.rs  rotate_tool.rs  toolbar.rs
admin-dioxus/src/components/sonner/: icons.rs  mod.rs  state.rs  toast.rs  toaster.rs  types.rs
admin-dioxus/src/components/toast/: mod.rs  state.rs  toast.rs
admin-dioxus/src/containers/: mod.rs
admin-dioxus/src/containers/auth_guard/: auth_guard.rs  error.rs  loader.rs  mod.rs
admin-dioxus/src/containers/blog_form/: blog_form.rs  form.rs  mod.rs
admin-dioxus/src/containers/category_form/: category_form.rs  form.rs  mod.rs
admin-dioxus/src/containers/nav_bar/: mod.rs  nav_bar.rs
admin-dioxus/src/containers/tag_form/: form.rs  mod.rs  tag_form.rs
admin-dioxus/src/containers/user_form/: form.rs  mod.rs  user_form.rs
admin-dioxus/src/hooks/: mod.rs  use_category_view.rs  use_form.rs  use_list_screen.rs  use_media_view.rs  use_previous.rs  use_state_frame_toast.rs  use_stateframe_toast.rs  use_tag_view.rs  use_user_view.rs
admin-dioxus/src/legacy/: README.md  editor_demo.rs  toast.rs
admin-dioxus/src/legacy/editor/: bubble_menu.rs  commands.rs  drag_drop_bridge.js  history.rs  shortcuts.rs
admin-dioxus/src/screens/: analytics.rs  editor_demo.rs  home.rs  mod.rs  sonner_demo.rs
admin-dioxus/src/screens/add_blog/: add_blog.rs  mod.rs
admin-dioxus/src/screens/add_category/: add_category.rs  mod.rs
admin-dioxus/src/screens/add_tag/: add_tag.rs  mod.rs
admin-dioxus/src/screens/add_user/: add_user.rs  mod.rs
admin-dioxus/src/screens/analytics/: mod.rs
admin-dioxus/src/screens/blog/: blog.rs  form.rs  mod.rs
admin-dioxus/src/screens/blog_list/: blog_list.rs  mod.rs
admin-dioxus/src/screens/categories/: mod.rs
admin-dioxus/src/screens/category/: category.rs  form.rs  mod.rs
admin-dioxus/src/screens/category_list/: category_list.rs  mod.rs
admin-dioxus/src/screens/home/: home.rs  mod.rs
admin-dioxus/src/screens/login/: form.rs  login.rs  mod.rs  mouse_tracking_card.rs
admin-dioxus/src/screens/media/: mod.rs
admin-dioxus/src/screens/posts/: mod.rs
admin-dioxus/src/screens/tag/: form.rs  mod.rs  tag.rs
admin-dioxus/src/screens/tag_list/: mod.rs  tag_list.rs
admin-dioxus/src/screens/tags/: mod.rs
admin-dioxus/src/screens/user/: mod.rs  user.rs
admin-dioxus/src/screens/user_list/: mod.rs
admin-dioxus/src/services/: http_client.rs  legacy  mod.rs  reqwest.rs  reqwest_client.rs
admin-dioxus/src/store/: error.rs  lib.rs  mod.rs  traits.rs
admin-dioxus/src/store/analytics/: actions.rs  filter_state.rs  mod.rs  state.rs
admin-dioxus/src/store/auth/: actions.rs  state.rs
admin-dioxus/src/store/categories/: actions.rs  state.rs
admin-dioxus/src/store/category/: actions.rs  state.rs
admin-dioxus/src/store/image_editor/: actions.rs  state.rs
admin-dioxus/src/store/media/: actions.rs  mod.rs  state.rs
admin-dioxus/src/store/post/: actions.rs  state.rs
admin-dioxus/src/store/posts/: actions.rs  state.rs
admin-dioxus/src/store/tag/: actions.rs  state.rs
admin-dioxus/src/store/tags/: actions.rs  state.rs
admin-dioxus/src/store/user/: actions.rs  state.rs
admin-dioxus/src/store/users/: actions.rs  state.rs
admin-dioxus/src/styles/: toast.css
admin-dioxus/src/ui/: mod.rs
admin-dioxus/src/ui/custom/: collapsible.rs  mod.rs  portal.rs
admin-dioxus/src/ui/radix/: alert_dialog.rs  mod.rs
admin-dioxus/src/utils/: colors.rs  dates.rs  file_helpers.rs  grid_calculator.rs  js_bridge.rs  mod.rs  persist.rs
(+347 files in other folders)
