[package]
name = "admin-dioxus"
version = "0.1.0"
authors = ["hmziqrs <hmziqrs@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
dioxus = { version = "0.7.1", features = ["router"] }
dioxus-time = { version = "0.7.1" }
reqwest = { version = "0.12.22", features = ["json", "cookies"] }
serde = "1.0.219"
serde_json = "1.0.140"
validator = { version = "0.20", features = ["derive"] }
hmziq-dioxus-free-icons = { version = "0.10.1", features = [
    "simple-icons",
    "lucide",
] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
dioxus-charts = "0.1.0"
regex = "1.10.3"
gloo-storage = "0.3.0"
gloo-utils = "0.2.0"
wasm-bindgen = "0.2.100"
ammonia = "4.0.0"
scraper = "0.20.0"
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen-futures = "0.4"
# wasm-cookies = "0.2.1"
dotenvy = "0.15.7"
log = "0.4.20"
once_cell = "1.19.0"
gloo-net = { version = "0.6.0", default-features = true }
bevy_pkv = { version = "0.9", default-features = false, features = ["redb"] }
web-sys = { version = "0.3.69", features = [
    "Document",
    "Window",
    "HtmlDocument",
    "Element",
    "HtmlElement",
    "DomRect",
    "NodeList",
    "EventTarget",
    "Node",
    "AttributeNameValue",
    "HtmlInputElement",
    "FileList",
    "File",
    "Blob",
    "Url",
    "CssStyleDeclaration",
    "FormData",
    "RequestCredentials",
    "Navigator",
    "Clipboard",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "HtmlImageElement",
    "ImageBitmap",
    "FilePropertyBag",
    "BlobPropertyBag",
    "Selection",
    "Range",
    "CustomEvent",
    "Event",
] }
lazy_static = "1.4.0"
im = "15.1.0"
gloo-console = "0.3.0"
uuid = { version = "1.16.0", features = ["v4", "js"] }
photon-rs = "0.3.2"
futures-channel = "0.3"
js-sys = "0.3"
serde-wasm-bindgen = "0.6.5"
futures-util = "0.3.31"
# dioxus-primitives = { git = "https://github.com/DioxusLabs/components", branch = "main" }

[patch.crates-io]
# dioxus-time = { git = "https://github.com/DioxusLabs/sdk", branch = "main", version = "0.1.0-alpha.1" }
dioxus-time = { path = "./pkgs/sdk/packages/time", version = "0.7.1" }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[build-dependencies]
dotenvy = "0.15.7"
